// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`en-no-url 1`] = `"Document Viewer"`;

exports[`en-no-url 2`] = `
<div
  class="no-url"
>
  <h2>
    <span>
      Welcome!
    </span>
  </h2>
</div>
`;

exports[`ru-no-url 1`] = `"Просмотр документов"`;

exports[`ru-no-url 2`] = `
<div
  class="no-url"
>
  <h2>
    <span>
      Добро пожаловать!
    </span>
  </h2>
</div>
`;

exports[`tr-no-url 1`] = `"Belge Görüntüleyici"`;

exports[`tr-no-url 2`] = `
<div
  class="no-url"
>
  <h2>
    <span>
      Hoş geldiniz!
    </span>
  </h2>
</div>
`;

exports[`uk-no-url 1`] = `"Перегляд документів"`;

exports[`uk-no-url 2`] = `
<div
  class="no-url"
>
  <h2>
    <span>
      Ласкаво просимо!
    </span>
  </h2>
</div>
`;
